update：支持发件测试
