# controller/settings.go
@@ -119,3 +119,93 @@ func (s *settings) UploadLogo(c *gin.Context) {
 		"msg":  "Logo 上传成功",
 	})
 }
+
+// SendMail 发送测试邮件
+// @Summary 发送测试邮件
+// @Description 配置相接口
+// @Tags 配置相接口
+// @Param Authorization header string true "Bearer 用户令牌"
+// @Param task body service.MailTest true "接收者邮箱"
+// @Success 200 {string} json "{"code": 0: "msg": "发送成功"}"
+// @Router /api/v1/settings/test/mailSend [post]
+func (s *settings) SendMail(c *gin.Context) {
+
+	var data = &service.MailTest{}
+
+	// 数据绑定
+	if err := c.ShouldBind(&data); err != nil {
+		Response(c, 90400, err.Error())
+		return
+	}
+
+	// 测试
+	if err := service.Settings.MailTest(data.Receiver); err != nil {
+		Response(c, 90500, err.Error())
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"code": 0,
+		"msg":  "发送成功",
+	})
+}
+
+// SendSms 发送测试短信
+// @Summary 发送测试短信
+// @Description 配置相接口
+// @Tags 配置相接口
+// @Param Authorization header string true "Bearer 用户令牌"
+// @Param task body service.SmsTest true "接收者手机号"
+// @Success 200 {string} json "{"code": 0: "msg": "发送成功"}"
+// @Router /api/v1/settings/test/smsSend [post]
+func (s *settings) SendSms(c *gin.Context) {
+
+	var data = &service.SmsTest{}
+
+	// 数据绑定
+	if err := c.ShouldBind(&data); err != nil {
+		Response(c, 90400, err.Error())
+		return
+	}
+
+	// 测试
+	if err := service.Settings.SmsTest(data.PhoneNumber); err != nil {
+		Response(c, 90500, err.Error())
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"code": 0,
+		"msg":  "发送成功",
+	})
+}
+
+// LdapLogin LDAP 用户登录测试
+// @Summary 用户登录测试
+// @Description 配置相接口
+// @Tags 配置相接口
+// @Param Authorization header string true "Bearer 用户令牌"
+// @Param task body service.LoginTest true "用户名密码"
+// @Success 200 {string} json "{"code": 0: "msg": "登录成功"}"
+// @Router /api/v1/settings/test/ldapLogin [post]
+func (s *settings) LdapLogin(c *gin.Context) {
+
+	var data = &service.LoginTest{}
+
+	// 数据绑定
+	if err := c.ShouldBind(&data); err != nil {
+		Response(c, 90400, err.Error())
+		return
+	}
+
+	// 测试
+	if err := service.Settings.LoginTest(data.Username, data.Password); err != nil {
+		Response(c, 90500, err.Error())
+		return
+	}
+
+	c.JSON(http.StatusOK, gin.H{
+		"code": 0,
+		"msg":  "登录成功",
+	})
+}
