# docs/swagger.json
@@ -1299,6 +1299,111 @@
                 }
             }
         },
+        "/api/v1/settings/test/ldapLogin": {
+            "post": {
+                "description": "配置相接口",
+                "tags": [
+                    "配置相接口"
+                ],
+                "summary": "用户登录测试",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer 用户令牌",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "用户名密码",
+                        "name": "task",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/service.LoginTest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 0: \"msg\": \"登录成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/settings/test/mailSend": {
+            "post": {
+                "description": "配置相接口",
+                "tags": [
+                    "配置相接口"
+                ],
+                "summary": "发送测试邮件",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer 用户令牌",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "接收者邮箱",
+                        "name": "task",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/service.MailTest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 0: \"msg\": \"发送成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/v1/settings/test/smsSend": {
+            "post": {
+                "description": "配置相接口",
+                "tags": [
+                    "配置相接口"
+                ],
+                "summary": "发送测试短信",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer 用户令牌",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "接收者手机号",
+                        "name": "task",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/service.SmsTest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "{\"code\": 0: \"msg\": \"发送成功\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
         "/api/v1/site": {
             "put": {
                 "description": "站点相关接口",
@@ -2670,9 +2775,6 @@
                 "password": {
                     "type": "string"
                 },
-                "password_expired_at": {
-                    "type": "string"
-                },
                 "phone_number": {
                     "type": "string"
                 },
@@ -2720,9 +2822,6 @@
                 },
                 "is_active": {
                     "type": "boolean"
-                },
-                "password_expired_at": {
-                    "type": "string"
                 },
                 "phone_number": {
                     "type": "string"
@@ -2992,6 +3091,21 @@
                 }
             }
         },
+        "service.LoginTest": {
+            "type": "object",
+            "required": [
+                "password",
+                "username"
+            ],
+            "properties": {
+                "password": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
         "service.MFAValidate": {
             "type": "object",
             "required": [
@@ -3051,6 +3165,17 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "service.MailTest": {
+            "type": "object",
+            "required": [
+                "receiver"
+            ],
+            "properties": {
+                "receiver": {
                     "type": "string"
                 }
             }
@@ -3407,6 +3532,17 @@
                     "items": {
                         "type": "integer"
                     }
+                }
+            }
+        },
+        "service.SmsTest": {
+            "type": "object",
+            "required": [
+                "phone_number"
+            ],
+            "properties": {
+                "phone_number": {
+                    "type": "string"
                 }
             }
         },
